--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@react-navigation/stack": "^6.3.29",
     "expo": "~50.0.14",
     "expo-status-bar": "~1.11.1",
+    "i": "^0.3.7",
+    "npm": "^10.5.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-vector-icons": "^10.0.3",
     "react-navigation": "^5.0.0",
+    "socket.io-client": "^4.7.5",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
